--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/joeldom/redesign" class="btn">View on GitHub</a>
       <a href="https://github.com/joeldom/redesign/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/joeldom/redesign/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="http://joeldom.github.io/redesign/greybox/" class="btn">Grey Box UI/UX</a>
     </section>
 
     <section class="main-content">
@@ -52,6 +52,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
