--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="https://github.com/joeldom/redesign" class="btn">View on GitHub</a>
       <a href="https://github.com/joeldom/redesign/zipball/master" class="btn">Download .zip</a>
 			<a href="https://github.com/joeldom/redesign/tarball/master" class="btn">Download .tar.gz</a>
-			<a href="https://github.com/joeldom/redesign/greybox/" class="btn">Greybox</a>
+			<a href="http://joeldom.github.io/redesign/greybox/" class="btn">Greybox</a>
     </section>
 
     <section class="main-content">
