featured row nesting

--- a/greybox/index.html
+++ b/greybox/index.html
@@ -160,11 +160,13 @@
 
       <div class="row">
         <div id="featured">
-          <div class="col-sm-8 featured-image"><img src="img/tabbed2.png"/></div>
-          <div class="col-sm-4 featured-info">
-            <h3>Featured</h3>
-            <p>Content Exceprt from full-length post. kept at around 140 char and has a <a href="#">Read More</a> link at the end.</p>
-          </div>
+					<div class="row">
+						<div class="col-sm-8 featured-image"><img src="img/tabbed2.png"/></div>
+	          <div class="col-sm-4 featured-info">
+	            <h3>Featured</h3>
+	            <p>Content Exceprt from full-length post. kept at around 140 char and has a <a href="#">Read More</a> link at the end.</p>
+	          </div>
+					</div>
         </div><!-- /featured -->
       </div><!-- /row -->
 
