changing images to X

--- a/greybox/index.html
+++ b/greybox/index.html
@@ -147,7 +147,7 @@
 					<div class="item active">
 						<article class="tile tile-graphic tile-carousel tile-large">
 							<a href="/14-redesign/ideas-post.html">
-								<div class="hero-cover" style="background-image: url(img/hero.png);"></div>
+								<div class="hero-cover" style="background-image: url(https://cloud.githubusercontent.com/assets/1181738/11506032/483bc4e0-981b-11e5-8d6c-fe2a8dea2907.png);"></div>
 								<div class="tile-excerpt palette-grey20 palette-inverse">
 									<div class="container">
 										<p class="category">Category 1</p>
@@ -162,7 +162,7 @@
 					<div class="item">
 						<article class="tile tile-graphic tile-carousel tile-large">
 							<a href="/14-redesign/ideas-post.html">
-								<div class="hero-cover" style="background-image: url(img/hero.png);"></div>
+								<div class="hero-cover" style="background-image: url(https://cloud.githubusercontent.com/assets/1181738/11506032/483bc4e0-981b-11e5-8d6c-fe2a8dea2907.png);"></div>
 								<div class="tile-excerpt palette-grey20 palette-inverse">
 									<div class="container">
 										<p class="category">Category 2</p>
@@ -191,7 +191,7 @@
       <div class="row">
         <div id="featured">
 					<div class="row">
-						<div class="col-sm-8 featured-image"><img src="img/tabbed2.png"/></div>
+						<div class="col-sm-8 featured-image"><img src="https://cloud.githubusercontent.com/assets/1181738/11509316/6a200fde-982b-11e5-8d40-9f5ea07d3b02.png"/></div>
 	          <div class="col-sm-4 featured-info">
 	            <h3>Featured</h3>
 	            <p>Content Exceprt from full-length post. kept at around 140 char and has a <a href="#">Read More</a> link at the end.</p>
@@ -209,21 +209,21 @@
 						<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
 							<a href="#">
 								<h2 class="tile-title">Project Name</h2>
-								<img src="img/tile.png" class="" alt="" />
+								<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png" class="" alt="" />
               </a>
 					</div><!-- /tile -->
           <div class="col-sm-4 col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
                 <h2 class="tile-title">Project Name</h2>
-                <img src="img/tile.png" class="" alt="" />
+                <img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png" class="" alt="" />
               </a>
           </div><!-- /tile -->
           <div class="col-sm-4 col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
                 <h2 class="tile-title">Project Name</h2>
-                <img src="img/tile.png" class="" alt="" />
+                <img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png" class="" alt="" />
               </a>
           </div><!-- /tile -->
 
@@ -233,7 +233,7 @@
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
                 <h2 class="tile-title">Project Name</h2>
-                <img src="img/tile.png" class="" alt="" />
+                <img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png" class="" alt="" />
               </a>
           </div><!-- /tile -->
 
@@ -243,7 +243,7 @@
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
                 <h2 class="tile-title">Project Name</h2>
-                <img src="img/tile.png" class="" alt="" />
+                <img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png" class="" alt="" />
               </a>
           </div><!-- /tile -->
 
@@ -251,7 +251,7 @@
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
                 <h2 class="tile-title">Project Name</h2>
-                <img src="img/tile.png" class="" alt="" />
+                <img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png" class="" alt="" />
               </a>
           </div><!-- /tile -->
         </div>
@@ -266,7 +266,7 @@
 		<div class="module module-hero">
 
 			<!-- full res size -->
-			<img src="img/hero.png">
+			<img src="https://cloud.githubusercontent.com/assets/1181738/11506032/483bc4e0-981b-11e5-8d6c-fe2a8dea2907.png">
 			<div class="module-content palette-grey40  palette-inverse">
           <div class="container">
             <h1 class="module-title">Method</h1>
@@ -321,7 +321,7 @@
 		<div class="module module-hero">
 
 			<!-- full res size -->
-			<img src="img/hero.png">
+			<img src="https://cloud.githubusercontent.com/assets/1181738/11506032/483bc4e0-981b-11e5-8d6c-fe2a8dea2907.png">
 			<div class="module-content palette-grey40  palette-inverse">
           <div class="container">
             <h1 class="module-title">Method</h1>
@@ -352,7 +352,7 @@
 					<p class="lead">Adherence to a big idea and endless repetition of centralized, fixed rules can make a brand seem unresponsive, mechanized, inhuman, and out of step with its audience. But without repetition, how does a brand create consistency? And without consistency, how does a brand maintain value?</p>
 				</div><!-- /col-sm-4 -->
 				<div class="col-md-8">
-					<img src="img/tile.png"/>
+					<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png"/>
 				</div>
 			</div>
 
@@ -366,7 +366,7 @@
 			</div>
 
 			<div class="module-hero">
-				<img src="img/tile.png"/>
+				<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png"/>
 				<div class="module-overlay palette-grey40  palette-inverse">
 					<h4>Header h4</h4>
 					<p>Normal Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante. Praesent vel lectus varius, venenatis ipsum eu, porttitor diam. Phasellus ac efficitur magna. Duis fermentum augue velit, id pretium turpis euismod ut. Suspendisse lobortis bibendum elit, sed tempor risus dignissim faucibus. Suspendisse sed massa id nibh dictum elementum ut nec dolor. Sed id dui eget ipsum scelerisque pharetra sed ut dolor. Duis sed nisl eget tellus posuere elementum ac id massa.</p>
@@ -492,7 +492,7 @@
 					<div class="row blog-list-row">
 						<div class="col-md-6">
 							<a href="#">
-								<img src="img/tile.png"/>
+								<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png"/>
 							</a>
 						</div><!-- /col-md-6 -->
 						<div class="col-md-6">
@@ -507,7 +507,7 @@
 					<div class="row blog-list-row">
 						<div class="col-md-6">
 							<a href="#">
-								<img src="img/tile.png"/>
+								<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png"/>
 							</a>
 						</div><!-- /col-md-6 -->
 						<div class="col-md-6">
@@ -522,7 +522,7 @@
 					<div class="row blog-list-row">
 						<div class="col-md-6">
 							<a href="#">
-								<img src="img/tile.png"/>
+								<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png"/>
 							</a>
 						</div><!-- /col-md-6 -->
 						<div class="col-md-6">
@@ -537,7 +537,7 @@
 					<div class="row blog-list-row">
 						<div class="col-md-6">
 							<a href="#">
-								<img src="img/tile.png"/>
+								<img src="https://cloud.githubusercontent.com/assets/1181738/11506044/57be15ee-981b-11e5-9d02-d72877c5de7e.png"/>
 							</a>
 
 						</div><!-- /col-md-6 -->
