--- a/index.html
+++ b/index.html
@@ -79,16 +79,19 @@
       │   │   ├── Art/
       │   │   ├── Science/
       │   │   ├── Code/
-      │   │   ├── Style/
+      │   │   └── Style/
       │   └──────── Single Post/
       ├── Info/
       │   ├── About/
       │   ├── How I Work/
+      │   ├── Stats/
       │   ├── Resume/
       │   └── Contact/
       │       ├── Web Questionaire/
       │       └── Logo/Brand Questionaire/
       ├── Search/
+      │   ├── Results/
+      │   └── Related/
       ├── 404/
       └── Sitemap/
       </pre></code>
