--- a/greybox/index.html
+++ b/greybox/index.html
@@ -67,7 +67,7 @@
       .palette-lavender {color: #BFC3EC;}/*ACB0DD*/
         .palette-lavender.palette-inverse {background-color: #BFC3EC;}
 
-
+			.module-article .author-about{background-color: white;}
 
 
 			#blog-list .row [class*="col-"] .row{margin-bottom: 10px;}
