--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Redesign by joeldom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'> -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,300,300italic,100,100italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -92,8 +94,21 @@
       ├── 404/
       └── Sitemap/
       </pre></code>
-    </section>
 
+      <h3>Article Ideas</h3>
+      <p>
+        <!-- <span class="num">1</span> -->
+        <strong>Art vs Design:</strong> You can have pretty and ugly art, but design that isn't aesthetically pleasing is deemed "unusable" or bad design. Art can deliberatly be made to create a displeasing reaction to it. This is typicically an undesirable outcome of design.
+      </p>
+      <p>
+        <!-- <span class="num">2</span> -->
+        <strong>Responsive Design Workflow: Preperation:</strong> Before even opening your design or UX programs, or before thinking about which responsive framework your going to use, before any of that you need to figure out who or what you are designing for. How will this be used? Who will use it? What is message the overall design is going to comunicate? These are less of responsive design question than just general design questions that come into play whether your making a poster, app, chair, car or newsletter.
+      </p>
+      <p>
+        <!-- <div class="num">3</div> -->
+        <strong>Art vs Design vs Crafts:</strong> For a long time I never understood the terms Arts & Crafts and why the two were bundled together. I always felt Crafts was below an artist to do. Crafting was something art school dropouts and failed designers got into. I guess it would help to first clearly define what the difference is between Art & Design then we can see where "Crafts" fits in.
+      </p>
+    </section>
 
   </body>
 </html>
