--- a/index.html
+++ b/index.html
@@ -95,18 +95,66 @@
       └── Sitemap/
       </pre></code>
 
+      <hr>
+
       <h3>Article Ideas</h3>
       <p>
         <!-- <span class="num">1</span> -->
         <strong>Art vs Design:</strong> You can have pretty and ugly art, but design that isn't aesthetically pleasing is deemed "unusable" or bad design. Art can deliberatly be made to create a displeasing reaction to it. This is typicically an undesirable outcome of design.
       </p>
+      <hr>
       <p>
         <!-- <span class="num">2</span> -->
         <strong>Responsive Design Workflow: Preperation:</strong> Before even opening your design or UX programs, or before thinking about which responsive framework your going to use, before any of that you need to figure out who or what you are designing for. How will this be used? Who will use it? What is message the overall design is going to comunicate? These are less of responsive design question than just general design questions that come into play whether your making a poster, app, chair, car or newsletter.
       </p>
+      <hr>
       <p>
         <!-- <div class="num">3</div> -->
         <strong>Art vs Design vs Crafts:</strong> For a long time I never understood the terms Arts & Crafts and why the two were bundled together. I always felt Crafts was below an artist to do. Crafting was something art school dropouts and failed designers got into. I guess it would help to first clearly define what the difference is between Art & Design then we can see where "Crafts" fits in.
+      </p>
+      <hr>
+      <p>
+        <strong>Responsive Design Process : Begining to Code</strong> How you code is almost as important as what order you code in. At this point you have your content architecture and framework all worked out.
+      </p>
+      <ul>
+        <li>pick a grid</li>
+        <ul>
+          <li>setting margins and gutters</li>
+          <li>defining breakpoints</li>
+        </ul>
+        <li>setting up typogrphy</li>
+        <ul>
+          <li>headings</li>
+          <li>links</li>
+          <li>callout / blockquotes</li>
+          <li>icons: contextual and graphics elements</li>
+        </ul>
+        <li>setting up the color palette</li>
+        <ul>
+          <li>color system</li>
+          <li>text color, backgrounds</li>
+        </ul>
+        <li>creating reusable modules</li>
+        <ul>
+          <li>top nav: mega menus, dropdowns</li>
+          <li>lower nav (footer)</li>
+          <li>secondary nav: will there be sidebars, tag clouds, search fields, dropdowns, tabs, modals</li>
+          <li>contextual nav: link verbaige, inline or block</li>
+        </ul>
+
+
+      </ul>
+      <hr>
+      <p>
+        <strong>Information Architecture: Mindmapping the userflow</strong> Deciding early on how the user will find what they are looking for through descriptive navigation and being aware of the content and how it is presented.
+      </p>
+      <hr>
+      <p>
+        <strong>User Experience: Deciding for the User</strong> When you design you are making descions for the people you plan on using it. Making smart decsions is harder than it sounds. With changing user needs, how the content is presented cany change for the same content. Content should dictate the design, not the other way around.
+      </p>
+      <hr>
+      <p>
+        <strong>User Experience: Doing What is Expected</strong> Doing what is expected is a good thing. Doing what is expected in an unexpected way is what makes the experience interesting. How do you come to design for what the end user expects to see?
       </p>
     </section>
 
