--- a/greybox/index.html
+++ b/greybox/index.html
@@ -104,6 +104,13 @@
 			@media (max-width: 767px){
 				#c_form input[type="submit"]{width: 100%;}
 			}
+			/*
+			- Set -moz-appearance to none. This will "reset" the styling of the element;
+			- Set text-indent to 0.01px. This will "push" the text a tiny bit[1] to the right;
+			- Set text-overflow to '' (an empty string). This will change anything that extends beyond the element's width to... nothing - and this includes the infamous arrow!
+
+
+			*/
 			/*STYLE AJAX LOADER FOR SUBMIT*/
 
 			/*READ MORE LINK STYLING*/
