--- a/greybox/index.html
+++ b/greybox/index.html
@@ -363,15 +363,8 @@
 			  </aside>
 
         <p class="intro">
-          Intro Paragraph. Testing for styling of character entity sizing issues and formatting with inline elements. HTML character entities: &ltrif; &rtrif;
+          Brands are no longer definitive. They are temporal. Brands are informed by multiple voices, and they exist in multiple mediums and through multiple contexts. The media that a brand inhabits is no longer fixed or linear, it is iterative, with no beginning, no end, and little permanency.
         </p>
-
-				<p>
-					&ltrif;&rtrif;
-				</p>
-				<p>
-					&lt; &gt; &amp; &nbsp; &copy;
-				</p>
 
 				<h3>Header h3</h3>
 				<p class="lead">Brands are no longer definitive. They are temporal. Brands are informed by multiple voices, and they exist in multiple mediums and through multiple contexts. The media that a brand inhabits is no longer fixed or linear, it is iterative, with no beginning, no end, and little permanency.</p>
