--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <li>carrot sizing</li>
         <li>mozilla map pin</li>
         <li>tile sizing (md sm xs)</li>
+        <li>links around imgs dotted border</li>
       </ul>
       <strong>Features to Finish (post launch)</strong>
       <ul>
