--- a/angular/index.html
+++ b/angular/index.html
@@ -12,7 +12,7 @@
       .form{
         background-color: white;
         width: 300px;
-        margin: 2.5em auto;
+        margin: 20% auto;
         display: block;
         padding: 20px;
       }
