adding type section

--- a/greybox/index.html
+++ b/greybox/index.html
@@ -385,7 +385,6 @@
 
         </div><!-- /row -->
 
-
 			</div><!-- /projects -->
 		</div><!-- /container -->
 
@@ -416,6 +415,7 @@
         </div>
       </div>
     </div>
+		<!-- TYPOGRAPHY SECTION 12.14.1:07PM -->
 
 		<div class="container">
 			<div class="module module-article">
