--- a/greybox/index.html
+++ b/greybox/index.html
@@ -68,6 +68,16 @@
       /*cite{font-style: italic;}*/
 
 
+			/*##########################
+          STATS & REVIEW
+      ###########################*/
+			.stats-hero{
+				background-image: linear-gradient(to bottom, #8385c3, #8385c3);
+				display: block;
+				width:100%;
+				height: 400px;
+			}
+
       /*##########################
           COLOR PALETTE
       ###########################*/
@@ -89,6 +99,8 @@
         .palette-lavender.palette-inverse {background-color: #BFC3EC;}
       .palette-olivegrey {color: #62645c;}
         .palette-olivegrey.palette-inverse {background-color: #62645c;}
+			.palette-purple {color: #8385c3;}/*ACB0DD*/
+				.palette-lavender.palette-inverse {background-color: #8385c3;}
 
 			.module-article .author-about{background-color: white;}
 
@@ -141,6 +153,8 @@
 				border:1px solid #545454; border-radius: 18px;display: inline-block;font-family:sans-serif;font-size:13px;font-weight:bold;line-height:36px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;}
 			.read-morev4{
 				border:1px solid #545454; border-radius: 1px;display: inline-block;font-family:sans-serif;font-size:13px;font-weight:bold;line-height:36px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;}
+			.read-morev5{
+				border:1px solid #545454; border-radius: 3px;display: inline-block;font-family:sans-serif;font-size:13px;font-weight:bold;line-height:36px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;}
 			.read-morev3:hover, .read-morev4:hover{color:black;border:1px solid black;}
 
 
@@ -459,7 +473,7 @@
 				<p>Normal Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante. Praesent vel lectus varius, venenatis ipsum eu, porttitor diam. Phasellus ac efficitur magna. Duis fermentum augue velit, id pretium turpis euismod ut. Suspendisse lobortis bibendum elit, sed tempor risus dignissim faucibus. Suspendisse sed massa id nibh dictum elementum ut nec dolor. Sed id dui eget ipsum scelerisque pharetra sed ut dolor. Duis sed nisl eget tellus posuere elementum ac id massa.</p>
 				<p class="callout" style="color: #7ea29a;">Callout Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante.</p>
 				<p>Normal Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante. Praesent vel lectus varius, venenatis ipsum eu, porttitor diam. Phasellus ac efficitur magna. Duis fermentum augue velit, id pretium turpis euismod ut. Suspendisse lobortis bibendum elit, sed tempor risus dignissim faucibus. Suspendisse sed massa id nibh dictum elementum ut nec dolor. Sed id dui eget ipsum scelerisque pharetra sed ut dolor. Duis sed nisl eget tellus posuere elementum ac id massa.</p>
-				<figure class="quote palette-lavender">
+				<figure class="quote palette-purple">
           <blockquote class="h2">... <cite>Experience Design</cite> both brings about a new level of understanding and asserts the value of this rapidly evolving field.</blockquote>
           <figcaption><b>John Maeda</b><br>President, Rhode Island School of Design</figcaption>
         </figure>
@@ -474,6 +488,17 @@
 			</div><!-- /module-article -->
 		</div>
 
+		<div class="module-hero">
+			<div class="stats-hero">
+
+			</div>
+			<div class="module-overlay">
+				<div class="container">
+					<p class="category">YEAR IN REVIEW</p>
+					<p class="module-title">The numbers won't tell the whole story but will offer some insight.</p>
+				</div>
+			</div>
+		</div>
 
 
 
@@ -1102,6 +1127,31 @@
 
 
 				-->
+				<br>
+				<hr>
+				<br>
+
+				<div class="col-sm-2">
+					<p style="background-color:#565894;">
+						<span class="vert-align">purple 1 #565894</span>
+					</p>
+				</div>
+				<div class="col-sm-2">
+					<p style="background-color:#f66a47;">
+						<span class="vert-align">orange #f66a47</span>
+					</p>
+				</div>
+				<div class="col-sm-2">
+					<p style="background-image:linear-gradient(to bottom, #565894, #8385c3);">
+						<span class="vert-align">purple grad</span>
+					</p>
+				</div>
+				<div class="col-sm-2">
+					<p style="background-image:linear-gradient(to bottom, #565894, #BFC3EC);">
+						<span class="vert-align">purple grad</span>
+					</p>
+				</div>
+
 
 
 			</div>
